# gh-notify-mcp

./: .gitignore  README.md  pyproject.toml
src/gh_notify/: config.py  db.py  github.py  mcp_server.py  models.py  urls.py  work_items_db.py
tests/: conftest.py  test_db.py  test_github.py  test_models.py  test_urls.py  test_work_items_db.py
