[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-notify-mcp"
version = "0.1.0"
description = "GitHub notification triage MCP server with SQLite state tracking"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
gh-notify-mcp = "gh_notify.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_notify"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
